# torchvnnlib

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  __init__.py  pyproject.toml
.github/workflows/: unit-tests.yml
data/: TinyImageNet_resnet_medium_prop_idx_57_sidx_9858_eps_0.0039.pth  example.vnnlib  prop_6.pth
data/TinyImageNet_resnet_medium_prop_idx_57_sidx_9858_eps_0.0039/or_0/: property_0.pth
data/TinyImageNet_resnet_medium_prop_idx_57_sidx_9858_eps_0.0039/or_group_0/: sub_prop_0.pth
data/example/or_0/: property_0.pth  property_1.pth
data/example/or_group_0/: sub_prop_0.pth
data/prop_6/or_0/: property_0.pth  property_1.pth
data/prop_6/or_group_0/: sub_prop_0.pth
src/torchvnnlib/: __init__.py  _backend.py  _constraint_row.py  _logging.py  _to_tensor.py  _torchvnnlib.py  py.typed
src/torchvnnlib/ast/: __init__.py  _expr.py  _flatten.py  _optimize.py  _parse.py  _preprocess.py  _print.py  _tokenize.py
src/torchvnnlib/fast_type/: __init__.py  _enums.py  _fast_type_detect.py  _type1_processor.py  _type2_processor.py  _type3_processor.py  _type4_processor.py  _type5_processor.py  _utils.py
test/: TinyImageNet_resnet_medium_prop_idx_57_sidx_9858_eps_0.0039.pth  classify_all.py  conftest.py  example.py  move_benchmark.py  move_benchmarks.py  prop_6.pth  test_ast.py  test_baselines.py  test_basic.py  test_benchmark.py  test_benchmarks.py  test_converter.py  test_correctness.py  test_import.py  test_parallel_comparison.py  test_performance.py  utils.py
test/baselines/acasxu_2023/prop_6/or_group_0/: sub_prop_0.pth
test/baselines/lsnc/quadrotor2d_output_0/or_group_0/: sub_prop_0.pth
test/benchmarks/lsnc/quadrotor2d_output_0/or_group_0/: sub_prop_0.pth
test/benchmarks/nn4sys_2023/: pensieve_parallel_0.vnnlib
test/results/acasxu_2023/prop_1/or_group_0/: sub_prop_0.pth
test/results/acasxu_2023/prop_10/or_group_0/: sub_prop_0.pth
test/results/acasxu_2023/prop_2/or_group_0/: sub_prop_0.pth
test/results/acasxu_2023/prop_3/or_group_0/: sub_prop_0.pth
test/results/acasxu_2023/prop_4/or_group_0/: sub_prop_0.pth
test/results/acasxu_2023/prop_5/or_group_0/: sub_prop_0.pth
test/results/acasxu_2023/prop_6/or_group_0/: sub_prop_0.pth  sub_prop_1.pth
test/results/acasxu_2023/prop_7/or_group_0/: sub_prop_0.pth
test/results/acasxu_2023/prop_8/or_group_0/: sub_prop_0.pth
test/results/acasxu_2023/prop_9/or_group_0/: sub_prop_0.pth
test/results/lsnc/quadrotor2d_output_0/or_group_0/: sub_prop_0.pth
test/results/metaroom_2023/spec_idx_0_eps_0.00000436/or_group_0/: sub_prop_0.pth
test/results_parallel/or_group_0/: sub_prop_0.pth
test_vnncomp/: run_all.py  test_acasxu.py  test_cctsdb.py  test_cgan.py  test_dist_shift.py  test_linearizenn.py  test_nn4sys.py  test_tllverifybench.py
tests/: __init__.py  conftest.py  test_baselines.py  test_basic.py  test_benchmarks.py  test_correctness.py  test_torchvnnlib.py  test_torchvnnlib_regression.py  update_baselines.py  utils.py
tests/baselines/acasxu_2023/prop_10/or_group_0/: sub_prop_0.pth
tests/baselines/acasxu_2023/prop_2/or_group_0/: sub_prop_0.pth
tests/baselines/acasxu_2023/prop_5/or_group_0/: sub_prop_0.pth
tests/baselines/acasxu_2023/prop_7/or_group_0/: sub_prop_0.pth
tests/baselines/cora/svhn-img84/or_group_0/: sub_prop_0.pth
tests/baselines/lsnc/quadrotor2d_output_0/or_group_0/: sub_prop_0.pth
tests/baselines/metaroom_2023/spec_idx_0_eps_0.00000436/or_group_0/: sub_prop_0.pth
tests/benchmarks/cora/: cifar10-img13.vnnlib  svhn-img84.vnnlib
tests/benchmarks/lsnc/: quadrotor2d_output_0.vnnlib  quadrotor2d_state_0.vnnlib
tests/benchmarks/nn4sys_2023/: cardinality_0_1_128.vnnlib
tests/fixtures/: conftest.py  sample_vnnlib_files.py  test_data.py
tests/test_arch/: conftest.py  test_imports.py
tests/test_benchmarks/: conftest.py  test_correctness.py  test_torchvnnlib.py  test_torchvnnlib_regression.py  update_baselines.py  utils.py
tests/test_benchmarks/benchmarks/cgan_2023/: cGAN_imgSz32_nCh_1_transposedConvPadding_1_prop_0_input_eps_0.010_output_eps_0.015.vnnlib
tests/test_benchmarks/benchmarks/cora/: cifar10-img13.vnnlib  svhn-img84.vnnlib
tests/test_benchmarks/benchmarks/metaroom_2023/: spec_idx_0_eps_0.00000436.vnnlib
tests/test_benchmarks/benchmarks/nn4sys_2023/: cardinality_0_1_128.vnnlib  pensieve_parallel_0.vnnlib
tests/test_units/: conftest.py  test_ast_expr_comprehensive.py  test_ast_expressions.py  test_ast_flatten.py  test_ast_flatten_comprehensive.py  test_ast_optimize.py  test_ast_parse.py  test_ast_preprocess.py  test_ast_print_comprehensive.py  test_ast_tokenize.py  test_backend_factory.py  test_backend_numpy.py  test_backend_torch.py  test_constraint_row.py  test_fast_type_detect.py  test_fast_type_processors.py  test_integration.py  test_to_tensor.py  test_tokenize_comprehensive.py  test_torchvnnlib_class.py  test_type1_processor.py  test_type2_processor.py  test_type3_processor.py  test_utils_comprehensive.py
tests/test_units/test_ast/: conftest.py  test_expr_comprehensive.py  test_expressions.py  test_flatten.py  test_flatten_comprehensive.py  test_optimize.py  test_parse.py  test_preprocess.py  test_print_comprehensive.py  test_tokenize.py  test_tokenize_comprehensive.py
tests/test_units/test_fast_type/: conftest.py  test_detect.py  test_enums.py  test_processors.py  test_type1.py  test_type2.py  test_type3.py  test_type4.py  test_type5.py
tests/test_units/test_torchvnnlib/: conftest.py  test_backend_factory.py  test_backend_numpy.py  test_backend_torch.py  test_integration.py  test_to_tensor.py  test_torchvnnlib_class.py  test_utils_comprehensive.py
torchvnnlib/: __init__.py  _backend.py  _parse.py  _to_tensor.py  _torchvnnlib.py
torchvnnlib/ast/: __init__.py  _expr.py  _flatten.py  _optimize.py  _optimizer.py  _parse.py  _parser.py  _pre_process.py  _preprocess.py  _print.py  _tokenize.py  _tokenizer.py
torchvnnlib/fast_type/: __init__.py  _fast_type_detect.py  _type1_processor.py  _type2_processor.py  _type3_processor.py  _type4_processor.py  _type5_processor.py  _utils.py
(+1012 files in other folders)
