[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchvnnlib"
version = "0.1.0"
description = "VNN-specific utilities and abstractions for PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zhongkui Ma", email = "zhongkui@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy==1.26.4",
]

[project.optional-dependencies]
torch = [
    "torch==2.3.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["torchvnnlib*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
torchvnnlib = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.ruff.lint]
# Comprehensive rule set (matches main rover project)
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "PIE", "RET", "SIM", "TID",
    "A", "BLE", "C90", "FBT", "ICN", "ISC", "PGH", "Q", "RSE", "SLF",
    "TD", "D", "PERF", "FURB", "PT", "T10", "PTH", "INP", "NPY", "RUF",
]

ignore = [
    "E501", "B008", "RET504", "SIM108", "FBT001", "FBT002",
    "D104", "TD002", "TD003",
    "T201", "PLR0913", "ERA001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__ (but still detect undefined names from star imports)
"tests/**" = ["INP001", "D100", "D103", "D101", "D102", "C901"]  # Test code: allow complex functions
"**/test/**" = ["INP001", "D100", "D103", "D101", "D102", "C901"]  # Test code: allow complex functions
"**/tests/**" = ["INP001", "D100", "D103", "D101", "D102", "C901"]  # Test code: allow complex functions

[tool.ruff.lint.isort]
known-first-party = ["torchvnnlib"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyright]
include = ["torchvnnlib"]
exclude = ["tests", "venv", ".venv", "build", "dist"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[project.urls]
Homepage = "https://github.com/ZhongkuiMa/torchvnnlib"
Repository = "https://github.com/ZhongkuiMa/torchvnnlib.git"
Documentation = "https://github.com/ZhongkuiMa/torchvnnlib#readme"
